src/objects/QPMS__Event_Problem_Codes__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>IF( ISBLANK(QPMS__For_use_by_User_Facility_Importer__c ) , QPMS__Device_Manufacturers_Only__r.QPMS__ComplaintId__c, QPMS__For_use_by_User_Facility_Importer__r.QPMS__ComplaintId__c )</formula>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Component_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Device Component Code</description>
        <inlineHelpText>Device Component Code</inlineHelpText>
        <label>Component Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Event Problem Codes (Component Code)</relationshipLabel>
        <relationshipName>Event_Problem_Codes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Device Code</description>
        <label>Device Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Event Problem Codes (Device Code)</relationshipLabel>
        <relationshipName>Event_Problem_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Manufacturers_Only__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Device Manufacturers Only</description>
        <label>Device Manufacturers Only</label>
        <referenceTo>QPMS__Device_Manufacturers_Only__c</referenceTo>
        <relationshipLabel>Event Problem Codes</relationshipLabel>
        <relationshipName>Event_Problem_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <formula>IF( ISBLANK(QPMS__For_use_by_User_Facility_Importer__c ) ,QPMS__Device_Manufacturers_Only__r.QPMS__Follow_Up_Number__c, QPMS__For_use_by_User_Facility_Importer__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__For_use_by_User_Facility_Importer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds the For use by User Facility/Importer object value</description>
        <label>For use by User Facility/Importer</label>
        <referenceTo>QPMS__For_use_by_User_Facility_Importer__c</referenceTo>
        <relationshipLabel>Event Problem Codes</relationshipLabel>
        <relationshipName>Event_Problem_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Impact_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Health Effect Impact Code</description>
        <inlineHelpText>Health Effect Impact Code</inlineHelpText>
        <label>Impact Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Event Problem Codes (Impact Code)</relationshipLabel>
        <relationshipName>Event_Problem_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Patient_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient Code</description>
        <label>Patient Code</label>
        <referenceTo>QPMS__Regulatory_Code__c</referenceTo>
        <relationshipLabel>Event Problem Codes</relationshipLabel>
        <relationshipName>Event_Problem_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>IF( ISBLANK( QPMS__For_use_by_User_Facility_Importer__c ) , QPMS__Device_Manufacturers_Only__r.QPMS__Regulatory_Body__c,QPMS__For_use_by_User_Facility_Importer__r.QPMS__Regulatory_Body__c )</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <label>Event Problem Codes</label>
    <nameField>
        <label>Event Problem Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Problem Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>